Обновил less файлы

--- a/less/blocks/about-us.less
+++ b/less/blocks/about-us.less
@@ -1,5 +1,5 @@
 .about-us {
-  /*background-color: lightyellow;*/
+
 }
 
 .about-us__wrapper {
@@ -29,9 +29,6 @@
   font-size: 17px;
   font-weight: 700;
   line-height: 20px;
-
-  /**/
-  /*background-color: lightyellow;*/
 }
 
 .about-us__item {
@@ -39,40 +36,37 @@
   margin: 0;
   padding: 55px 0 28px 0;
 
-  /**/
-  /*background-color: lightcyan;*/
-
   &::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 55px;
-    height: 38px;
+    height: 40px;
   }
 
   &--ecology::before {
-    background: url("../img/icon-feature-1.svg") no-repeat 0% 100%;
+    background: url("../img/icon-feature-1.svg") no-repeat 7px 2px;
   }
 
   &--price::before {
-    background: url("../img/icon-feature-3.svg") no-repeat 0% 100%;
+    background: url("../img/icon-feature-3.svg") no-repeat 0px 3px;
   }
 
   &--like::before {
-    background: url("../img/icon-feature-5.svg") no-repeat 0% 100%;
+    background: url("../img/icon-feature-5.svg") no-repeat 7px 8px;
   }
 
   &--love::before {
-    background: url("../img/icon-feature-2.svg") no-repeat 0% 100%;
+    background: url("../img/icon-feature-2.svg") no-repeat 3px 5px;
   }
 
   &--home::before {
-    background: url("../img/icon-feature-4.svg") no-repeat 0% 100%;
+    background: url("../img/icon-feature-4.svg") no-repeat 0px 6px;
   }
 
   &--gift::before {
-    background: url("../img/icon-feature-6.svg") no-repeat 0% 100%;
+    background: url("../img/icon-feature-6.svg") no-repeat 3px 4px;
   }
 }
 
@@ -132,7 +126,7 @@
 
   .about-us__wrapper {
     width: 700px;
-    padding: 49px 0 32px 0;
+    padding: 48px 0 33px 0;
   }
 
   .about-us__title {
