--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,11 +1,11 @@
 .page-header {
   min-height: 80px;
+  background-color: @cl-mainbackground;
 }
-
-
 
 @media @tablet-widths {
   .page-header {
     height: 88px;
+    border-bottom: 1px solid @cl-border;
   }
 }
