--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -8,7 +8,16 @@
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  color: @cl-gray;
-  background-color: @cl-white;
-  border: 2px solid @cl-gray;
+  color: @cl-text;
+  background-color: @cl-mainbackground;
+  border: 2px solid @cl-text;
+
+  &:hover {
+    color: @cl-mainbackground;
+    background-color: @cl-text;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
