--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,5 +1,5 @@
 .contacts {
-  /*background-color: lightgreen;*/
+
 }
 
 .contacts__wrapper {
@@ -25,7 +25,7 @@
   padding: 26px 0 37px 0;
   font-size: 15px;
   line-height: 30px;
-  color: @cl-gray;
+  color: @cl-text;
 }
 
 .contacts__item {
@@ -34,19 +34,31 @@
 }
 
 .contacts__item-title {
-  width: 75px;
+  width: 80px;
 }
 
 .contacts__content-link {
-  color: @cl-gray;
+  color: @cl-text;
   text-decoration: none;
   border-bottom: 1px solid #62d1ba;
+
+  &:hover {
+    color: #46c1ae;
+    border-bottom-color: #46c1ae;
+  }
+
+  &:active {
+    color: rgba(70, 193, 174, 0.3);
+    border-bottom-color: rgba(70, 193, 174, 0.3);
+  }
 }
 
 .contacts__map {
   width: 320px;
   height: 457px;
-  background: #e9e5dc url("../img/map-mobile@1x.jpg") no-repeat;
+  background-color: #e9e5dc;
+  background-image: url("../img/map-mobile@1x.jpg");
+  background-repeat: no-repeat;
 }
 
 .contacts__write-us {
@@ -57,13 +69,24 @@
 @media @tablet-widths {
   .contacts__wrapper {
     width: 768px;
-    padding: 59px 0 57px 0;
+    padding: 58px 0 57px 0;
   }
 
   .contacts__title {
+    position: relative;
     padding: 0 0 0 50px;
     font-size: 43px;
     line-height: 50px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -14px;
+      right: 53px;
+      width: 47px;
+      height: 81px;
+      background-image: url("../img/icon-flag.svg");
+    }
   }
 
   .contacts__list {
@@ -80,6 +103,7 @@
   .contacts__map {
     width: 768px;
     height: 457px;
+    background-image: url("../img/map-tablet@1x.jpg");
   }
 
   .contacts__write-us {
@@ -87,7 +111,6 @@
     margin: 55px auto 0 auto;
   }
 }
-
 
 @media @desktop-widths {
   .contacts__wrapper {
@@ -98,9 +121,13 @@
 
   .contacts__title {
     padding: 0;
-
     font-size: 53px;
     line-height: 57px;
+
+    &::before {
+      top: -8px;
+      left: -112px;
+    }
   }
 
   .contacts__list {
@@ -116,6 +143,7 @@
     right: 0;
     width: 525px;
     height: 457px;
+    background-image: url("../img/map-desktop@1x.jpg");
   }
 
   .contacts__write-us {
