--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -15,7 +15,7 @@
   font-size: 0;
   border: none;
   cursor: pointer;
-  background-color: @cl-white;
+  background-color: @cl-mainbackground;
 }
 
 .main-nav--closed  .main-nav__toggle::before {
@@ -59,6 +59,24 @@
   z-index: 2;
 }
 
+.main-nav__logo {
+  height: 57px;
+  margin: 0;
+  padding: 21px 0 0 0;
+  text-align: center;
+
+  border-top: 1px solid @cl-border;
+  border-bottom: 1px solid @cl-border;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 .main-nav__menu-list {
   display: flex;
   flex-direction: column;
@@ -68,38 +86,65 @@
 }
 
 .main-nav__menu-item {
+  position: relative;
   margin: 0 0 0 0;
   padding: 25px 0 29px 75px;
-  background-color: @cl-white;
-  border-bottom: 1px solid @cl-header-border;
+  background-color: @cl-mainbackground;
+  border-bottom: 1px solid @cl-border;
 }
 
 .main-nav__link {
-  position: relative;
   font-family: @font-bold;
+  font-weight: 700;
   text-decoration: none;
   color: @cl-black;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
 
   &--search::before {
     content: "";
     position: absolute;
-    top: 5px;
-    left: -43px;
+    top: 30px;
+    left: 32px;
     width: 19px;
     height: 19px;
 
     background: url("../img/icon-search.svg") no-repeat;
   }
 
+  &--search:hover::before {
+    background: url("../img/icon-search-hvr.svg") no-repeat;
+  }
+
+  &--search:active::before {
+    background: url("../img/icon-search-hvr.svg") no-repeat;
+    opacity: 0.3;
+  }
+
   &--cart::before {
     content: "";
     position: absolute;
-    top: 5px;
-    left: -44px;
+    top: 29px;
+    left: 31px;
     width: 22px;
     height: 19px;
 
     background: url("../img/icon-cart.svg") no-repeat;
+  }
+
+  &--cart:hover::before {
+    background: url("../img/icon-cart-hvr.svg") no-repeat;
+  }
+
+  &--cart:active::before {
+    background: url("../img/icon-cart-hvr.svg") no-repeat;
+    opacity: 0.3;
   }
 }
 
@@ -145,8 +190,8 @@
   }
 }
 
-@media @tablet-widths {
 
+@media @tablet-widths {
   .main-nav__toggle {
     display: none;
   }
@@ -158,6 +203,11 @@
     width: 668px;
     margin: 0 auto;
     padding: 0;
+  }
+
+  .main-nav__logo {
+    padding: 22px 0 0 0;
+    border: 0;
   }
 
   .main-nav__menu-list {
@@ -179,31 +229,29 @@
     border: 0;
 
     &--main {
-      margin: 0;
       padding: 17px 0 0 0;
     }
 
     &--user {
       padding: 30px 0 35px 83px;
-      border-left: 1px solid @cl-header-border;
+      border-left: 1px solid @cl-border;
     }
 
     &--user:first-child {
       font-size: 0;
     }
+  }
 
-    .main-nav__link {
+  .main-nav__link {
 
-      &--search:before {
-        top: -6px;
-        left: -49px;
-      }
-
-      &--cart:before {
-        left: -52px;
-      }
+    &--search::before {
+      top: 37px;
+      left: 34px;
     }
 
+    &--cart::before {
+      top: 34px;
+    }
   }
 
   .main-nav__label {
@@ -214,6 +262,10 @@
 @media @desktop-widths {
   .main-nav__wrapper {
     width: 1050px;
+  }
+
+  .main-nav__logo {
+    padding: 9px 28px 0 0;
   }
 
   .main-nav__menu-list {
@@ -234,7 +286,7 @@
 
     &--main:nth-child(2) {
       padding-left: 35px;
-      border-left: 1px solid @cl-header-border;
+      border-left: 1px solid @cl-border;
     }
   }
 
