--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -1,11 +1,19 @@
 .page-title {
   margin: 0;
   padding: 0;
-  background-color: @cl-light-gray;
+  background-color: #f1f1f1;
 
   &--index {
-    height: 283px;
-    background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+    height: 282px;
+    background-color: #f9f9f9;
+    background-image: url("../img/hero-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center -18px;
+    background-size: 575px auto;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/hero-mobile@2x.jpg");
+    }
   }
 }
 
@@ -18,21 +26,13 @@
   font-weight: 700;
   line-height: 30px;
   text-align: center;
-
-  &--index {
-    padding: 70px 0 76px 0;
-  }
-
-  /*временно для сетки*/
-  /*background-color: red;*/
 }
+
 
 @media @tablet-widths {
   .page-title {
     position: relative;
     z-index: -1;
-
-    border-top: 1px solid @cl-header-border;
 
     &::after {
       content: "";
@@ -41,13 +41,20 @@
       left: 0;
       width: 100%;
       height: 24px;
-      background: url("../img/zigzag-fill-desktop.svg") repeat-x;
+      background: url("../img/bg-zigzag-fill.svg") repeat-x;
       background-size: contain;
     }
 
     &--index {
       height: 626px;
-      background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 100%;
+      background-image: url("../img/hero-desktop@1x.jpg");
+      background-position: center -1px;
+      background-size: 1150px auto;
+
+      @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+        background-image: url("../img/hero-desktop@2x.jpg");
+      }
+
       &::after {
         display: none;
       }
@@ -70,17 +77,12 @@
   }
 }
 
-
 @media @desktop-widths {
   .page-title {
 
     &::after {
       bottom: -19px;
       height: 34px;
-    }
-
-    &--index {
-      background-size: auto;
     }
   }
 
@@ -91,7 +93,7 @@
     line-height: 57px;
 
     &--index {
-      padding: 154px 0 0 0;
+      padding: 153px 0 0 0;
     }
   }
 }
