--- a/less/blocks/product-type.less
+++ b/less/blocks/product-type.less
@@ -13,11 +13,8 @@
 
   font-family: @font-bold;
   font-size: 19px;
+  font-weight: 700;
   line-height: 24px;
-
-
-  /*временно для сетки*/
-  /*background-color: lightcyan;*/
 }
 
 .product-type__link {
@@ -27,37 +24,56 @@
   padding: 24px 28px 31px 28px;
 
   text-decoration: none;
-  color: @cl-white;
+  color: @cl-mainbackground;
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 
   &--interior {
     background-color: @cl-turquoise;
+  }
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 21px;
-      right: 35px;
-      width: 45px;
-      height: 65px;
-      background: url("../img/icon-interior.svg") no-repeat 50% 50%;
-    }
+  &--interior::after {
+    content: "";
+    position: absolute;
+    top: 23px;
+    right: 31px;
+    width: 45px;
+    height: 65px;
+    background-image: url("../img/icon-interior.svg");
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    opacity: 0.5;
   }
 
   &--toys {
-    background-color: @cl-dark-turquoise;
+    background-color: @cl-darkturquoise;
+  }
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 17px;
-      right: 26px;
-      width: 62px;
-      height: 65px;
-      background: url("../img/icon-toy.svg") no-repeat 50% 50%;
-    }
+  &--toys::after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    width: 62px;
+    height: 65px;
+    background-image: url("../img/icon-toy.svg");
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    opacity: 0.5;
+  }
+
+  &--interior:hover::after,
+  &--toys:hover::after {
+    opacity: 0.7;
+  }
+
+  &--interior:active::after,
+  &--toys:active::after {
+    opacity: 0.3;
   }
 }
-
 
 @media @tablet-widths {
   .product-type {
@@ -66,11 +82,11 @@
     &::after {
       content: "";
       position: absolute;
-      bottom: -14px;
+      bottom: -4px;
       left: 0;
       width: 100%;
       height: 24px;
-      background: url("../img/zigzag-fill-desktop.svg") repeat-x;
+      background: url("../img/bg-zigzag-fill.svg") repeat-x;
       background-size: contain;
     }
   }
@@ -89,7 +105,22 @@
 
   .product-type__link {
     width: 262px;
-    padding: 27px 36px 30px 36px;
+    padding: 27px 36px 40px 36px;
+
+    &:hover {
+      position: relative;
+      top: -5px;
+    }
+
+    &--interior::after {
+      top: 30px;
+      right: 32px;
+    }
+
+    &--toys::after {
+      top: 31px;
+      right: 32px;
+    }
   }
 }
 
@@ -97,7 +128,7 @@
   .product-type {
 
     &::after {
-      bottom: -19px;
+      bottom: -9px;
       height: 34px;
     }
   }
@@ -108,6 +139,6 @@
 
   .product-type__link {
     width: 451px;
-    padding: 27px 36px 30px 38px;
+    padding: 27px 36px 40px 38px;
   }
 }
