--- a/less/blocks/product.less
+++ b/less/blocks/product.less
@@ -2,12 +2,21 @@
   display: flex;
   flex-direction: column;
   margin: 30px 0 0 0;
+
+  &:hover {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  }
 }
 
 .product__photo {
   width: 260px;
   height: 195px;
-  background-color: #f1f1f1;
+  background-color: @cl-footerbackground;
+  overflow: hidden;
 }
 
 .product__content {
@@ -15,7 +24,7 @@
   flex-direction: column;
   width: 204px;
   padding: 25px 27px 25px 27px;
-  border: 1px solid #ececec;
+  border: 1px solid @cl-border;
 }
 
 .product__title {
@@ -25,23 +34,31 @@
   line-height: 24px;
   text-decoration: none;
   color: @cl-black;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
 
 .product__properties {
   width: 204px;
-  margin: 5px 0 5px 0;
+  margin: 6px 0 5px 0;
   padding: 0;
   font-size: 13px;
   line-height: 30px;
-  color: @cl-gray;
+  color: @cl-text;
 }
 
 .product__wrapper {
   display: flex;
   justify-content: space-between;
-  margin: 15px 0 0 0;
-  padding: 20px 0 3px 0;
-  border-top: 1px solid #ececec;
+  margin: 14px 0 0 0;
+  padding: 21px 0 2px 0;
+  border-top: 1px solid @cl-border;
 }
 
 .product__cy {
@@ -51,6 +68,40 @@
   font-size: 15px;
   line-height: 24px;
   color: @cl-black;
+  cursor: pointer;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
+}
+
+.product__buy {
+  position: relative;
+  font-size: 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 1px;
+    right: -3px;
+    width: 22px;
+    height: 19px;
+
+    background: url("../img/icon-cart.svg") no-repeat;
+  }
+
+  &:hover::after {
+    background: url("../img/icon-cart-hvr.svg") no-repeat;
+  }
+
+  &:active::after {
+    background: url("../img/icon-cart-hvr.svg") no-repeat;
+    opacity: 0.3;
+  }
 }
 
 @media @tablet-widths {
@@ -66,8 +117,8 @@
 
   .product__content {
     width: 282px;
-    height: 286px;
-    padding: 23px 26px 23px 26px;
+    height: 281px;
+    padding: 24px 26px 27px 28px;
   }
 
   .product__title {
@@ -79,6 +130,11 @@
     flex-grow: 1;
     width: 268px;
     font-size: 15px;
+  }
+
+  .product__wrapper {
+    margin: 0 6px 0 6px;
+    padding: 21px 0 0 0;
   }
 
   .product__cy {
@@ -98,7 +154,12 @@
 
   .product__content {
     width: 264px;
-    height: 148px;
-    padding: 23px 25px 24px 25px;
+    height: 144px;
+    padding: 24px 25px 27px 25px;
+  }
+
+  .product__wrapper {
+    margin: 0 7px 0 0;
+    padding: 21px 0 0 0;
   }
 }
