--- a/less/blocks/production.less
+++ b/less/blocks/production.less
@@ -5,22 +5,69 @@
 
   width: 260px;
   margin: 30px auto 58px auto;
-  border: 1px solid #ececec;
+  border: 1px solid @cl-border;
+
+  &:hover {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  }
 }
 
 .production__title {
+  position: relative;
   display: block;
   margin: 0;
   padding: 23px 0 24px 90px;
   font-family: @font-bold;
   font-size: 17px;
   line-height: 24px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 34px;
+    width: 32px;
+    height: 32px;
+    background-image: url("../img/icon-video.svg");
+  }
 }
 
 .production__video {
+  position: relative;
   width: 260px;
   height: 150px;
-  background-color: #f1f1f1;
+  background-color: @cl-footerbackground;
+  overflow: hidden;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 41px;
+    left: 79px;
+    width: 101px;
+    height: 77px;
+    background-image: url("../img/icon-play.svg");
+    background-size: contain;
+    cursor: pointer;
+  }
+
+  &:hover::after {
+    top: 30px;
+    left: 73px;
+    width: 121px;
+    height: 92px;
+  }
+
+  &:active::after {
+    top: 48px;
+    left: 89px;
+    width: 81px;
+    height: 62px;
+  }
 }
 
 .production__content {
@@ -47,18 +94,38 @@
   }
 
   .production__title {
+    order: 1;
     padding: 37px 0 0 105px;
     font-size: 20px;
+
+    &::before {
+      top: 33px;
+      left: 42px;
+    }
   }
 
   .production__video {
-    order: -1;
     width: 668px;
     height: 455px;
+
+    &::after {
+      top: 195px;
+      left: 284px;
+    }
+
+    &:hover::after {
+      top: 184px;
+      left: 278px;
+    }
+    &:active::after {
+      top: 202px;
+      left: 294px;
+    }
   }
 
   .production__content {
-    padding: 32px 40px 45px 40px;
+    order: 2;
+    padding: 33px 40px 45px 40px;
   }
 
   .production__desc {
@@ -67,7 +134,7 @@
   }
 
   .production__order {
-    margin: 36px 0 0 0;
+    margin: 35px 0 0 0;
   }
 }
 
@@ -81,6 +148,11 @@
 
   .production__title {
     padding: 94px 51px 0 760px;
+
+    &::before {
+      top: 41px;
+      left: 762px;
+    }
   }
 
   .production__video {
@@ -89,13 +161,27 @@
     left: 0;
     width: 682px;
     height: 455px;
+
+    &::after {
+      top: 188px;
+      left: 299px;
+    }
+
+    &:hover::after {
+      top: 177px;
+      left: 293px;
+    }
+    &:active::after {
+      top: 195px;
+      left: 309px;
+    }
   }
 
   .production__content {
-    padding: 33px 58px 0 760px;
+    padding: 34px 58px 0 760px;
   }
 
   .production__order {
-    margin: 47px 0 0 0;
+    margin: 46px 0 0 0;
   }
 }
