--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -8,7 +8,7 @@
     left: 0;
     width: 100%;
     height: 7px;
-    background: url("../img/zigzag-line-desktop.svg") repeat-x;
+    background: url("../img/bg-zigzag-line.svg") repeat-x;
     background-size: contain;
   }
 }
@@ -38,7 +38,7 @@
   padding: 0;
   font-size: 15px;
   line-height: 30px;
-  color: @cl-gray;
+  color: @cl-text;
 }
 
 .reviews__author-name {
@@ -58,7 +58,7 @@
   padding: 3px 0 0 0;
   font-size: 17px;
   line-height: 30px;
-  color: @cl-gray;
+  color: @cl-text;
 }
 
 .reviews__arrows {
@@ -73,7 +73,7 @@
   vertical-align: top;
   width: 128px;
   height: 50px;
-  border: 1px solid #ececec;
+  border: 1px solid @cl-border;
 
   &::before {
     content: "";
@@ -105,6 +105,16 @@
     right: 42px;
     transform: rotate(-135deg);
   }
+
+  &:hover::before,
+  &:hover::after {
+    border-color: #666666;
+  }
+
+  &:active::before,
+  &:active::after {
+    border-color: #b2b2b2;
+  }
 }
 
 .reviews__arrow:nth-child(2) {
@@ -129,7 +139,15 @@
     margin: 0 auto;
     padding: 76px 50px 134px 50px;
 
-    background: @cl-white url("../img/review@1x.jpg") no-repeat 0% 0%;
+    background-color: @cl-mainbackground;
+    background-image: url("../img/review@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    background-size: 350px auto;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/review@2x.jpg");
+    }
   }
 
   .reviews__title {
@@ -138,7 +156,7 @@
   }
 
   .reviews__item {
-    padding: 48px 0 0 0;
+    padding: 49px 0 0 0;
   }
 
   .reviews__text {
@@ -188,7 +206,6 @@
   }
 }
 
-
 @media @desktop-widths {
   .reviews {
 
@@ -209,11 +226,11 @@
   }
 
   .reviews__author-name {
-    padding: 39px 0 0 0;
+    padding: 38px 0 0 0;
   }
 
   .reviews__arrows {
-    bottom: 188px;
+    bottom: 199px;
     right: 0;
   }
 
