Обновил less файлыÐ

--- a/less/common.less
+++ b/less/common.less
@@ -3,5 +3,5 @@ body {
   font-family: @font-regular;
   font-weight: 400;
   color: @cl-black;
-  background-color: @cl-white;
+  background-color: @cl-mainbackground;
 }
