--- a/less/variables.less
+++ b/less/variables.less
@@ -5,13 +5,11 @@
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1150px)";
 
-@cl-white: #ffffff;
+@cl-mainbackground: #ffffff;
+@cl-footerbackground: #f1f1f1;
 @cl-black: #000000;
-@cl-light-gray: #f1f1f1;
-@cl-gray: #444444;
-@cl-turquoise: #63d1bb;
-@cl-dark-turquoise: #56c3b2;
-
 @cl-toggle: #221f1f;
-@cl-header-border: #ececec;
-@cl-product-border: #ededed;
+@cl-turquoise: #63d1bb;
+@cl-darkturquoise: #56c3b2;
+@cl-text: #444444;
+@cl-border: #ececec;
