--- a/less/blocks/product.less
+++ b/less/blocks/product.less
@@ -117,7 +117,7 @@
 
   .product__content {
     width: 282px;
-    height: 281px;
+    min-height: 281px;
     padding: 24px 26px 27px 28px;
   }
 
@@ -154,7 +154,7 @@
 
   .product__content {
     width: 264px;
-    height: 144px;
+    min-height: 144px;
     padding: 24px 25px 27px 25px;
   }
 
