--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -4,7 +4,7 @@
   background-color: #f1f1f1;
 
   &--index {
-    height: 282px;
+    min-height: 282px;
     background-color: #f9f9f9;
     background-image: url("../img/hero-mobile@1x.jpg");
     background-repeat: no-repeat;
@@ -46,7 +46,7 @@
     }
 
     &--index {
-      height: 626px;
+      min-height: 626px;
       background-image: url("../img/hero-desktop@1x.jpg");
       background-position: center -1px;
       background-size: 1150px auto;
