--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -56,9 +56,7 @@
 .contacts__map {
   width: 320px;
   height: 457px;
-  background-color: #e9e5dc;
-  background-image: url("../img/map-mobile@1x.jpg");
-  background-repeat: no-repeat;
+  background: url("../img/icon-map-pin.svg") 125px 170px no-repeat, url("../img/map-mobile@1x.jpg") 0 0 no-repeat;
 }
 
 .contacts__write-us {
@@ -103,7 +101,7 @@
   .contacts__map {
     width: 768px;
     height: 457px;
-    background-image: url("../img/map-tablet@1x.jpg");
+    background: url("../img/icon-map-pin.svg") 345px 160px no-repeat, url("../img/map-tablet@1x.jpg") 0 0 no-repeat;
   }
 
   .contacts__write-us {
@@ -143,7 +141,7 @@
     right: 0;
     width: 525px;
     height: 457px;
-    background-image: url("../img/map-desktop@1x.jpg");
+    background: url("../img/icon-map-pin.svg") 240px 165px no-repeat, url("../img/map-desktop@1x.jpg") 0 0 no-repeat;
   }
 
   .contacts__write-us {
