--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -77,6 +77,11 @@
   }
 }
 
+.main-nav__logo-img {
+  width: 86px;
+  height: 35px;
+}
+
 .main-nav__menu-list {
   display: flex;
   flex-direction: column;
@@ -94,7 +99,6 @@
 }
 
 .main-nav__link {
-  font-family: @font-bold;
   font-weight: 700;
   text-decoration: none;
   color: @cl-black;
@@ -210,6 +214,11 @@
     border: 0;
   }
 
+  .main-nav__logo-img {
+    width: 113px;
+    height: 46px;
+  }
+
   .main-nav__menu-list {
     flex-direction: row;
     flex-wrap: wrap;
@@ -266,6 +275,11 @@
 
   .main-nav__logo {
     padding: 9px 28px 0 0;
+  }
+
+  .main-nav__logo-img {
+    width: 149px;
+    height: 72px;
   }
 
   .main-nav__menu-list {
