--- a/less/blocks/product.less
+++ b/less/blocks/product.less
@@ -29,8 +29,8 @@
 
 .product__title {
   width: 204px;
-  font-family: @font-bold;
   font-size: 17px;
+  font-weight: 700;
   line-height: 24px;
   text-decoration: none;
   color: @cl-black;
@@ -64,7 +64,6 @@
 .product__cy {
   margin: 0;
   padding: 0;
-  font-family: @font-bold;
   font-size: 15px;
   line-height: 24px;
   color: @cl-black;
