--- a/less/fonts.less
+++ b/less/fonts.less
@@ -6,7 +6,7 @@
 }
 
 @font-face {
-  font-family: "OpenSans Bold";
+  font-family: "OpenSans";
   font-style: normal;
   font-weight: 700;
   src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
