--- a/less/blocks/production.less
+++ b/less/blocks/production.less
@@ -21,7 +21,7 @@
   display: block;
   margin: 0;
   padding: 23px 0 24px 90px;
-  font-family: @font-bold;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
 
@@ -42,31 +42,32 @@
   height: 150px;
   background-color: @cl-footerbackground;
   overflow: hidden;
+}
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 41px;
-    left: 79px;
-    width: 101px;
-    height: 77px;
-    background-image: url("../img/icon-play.svg");
-    background-size: contain;
-    cursor: pointer;
-  }
+.production__play {
+  position: absolute;
+  top: 41px;
+  left: 79px;
+  width: 101px;
+  height: 77px;
+  background: url("../img/icon-play.svg") no-repeat;
+  background-size: contain;
+  border: 0;
+  cursor: pointer;
 
-  &:hover::after {
+  &:hover {
     top: 30px;
     left: 73px;
     width: 121px;
     height: 92px;
   }
 
-  &:active::after {
+  &:active {
     top: 48px;
     left: 89px;
     width: 81px;
-    height: 62px;
+    height: 92px;
+    opacity: 0.3;
   }
 }
 
@@ -80,10 +81,6 @@
   padding: 0;
   font-size: 13px;
   line-height: 24px;
-}
-
-.production__order {
-  margin: 25px 0 0 0;
 }
 
 
@@ -107,17 +104,18 @@
   .production__video {
     width: 668px;
     height: 455px;
+  }
 
-    &::after {
-      top: 195px;
-      left: 284px;
-    }
+  .production__play {
+    top: 195px;
+    left: 284px;
 
-    &:hover::after {
+    &:hover {
       top: 184px;
       left: 278px;
     }
-    &:active::after {
+
+    &:active {
       top: 202px;
       left: 294px;
     }
@@ -131,10 +129,6 @@
   .production__desc {
     font-size: 15px;
     line-height: 30px;
-  }
-
-  .production__order {
-    margin: 35px 0 0 0;
   }
 }
 
@@ -161,27 +155,25 @@
     left: 0;
     width: 682px;
     height: 455px;
+  }
 
-    &::after {
-      top: 188px;
-      left: 299px;
-    }
+  .production__play {
+    top: 188px;
+    left: 299px;
 
-    &:hover::after {
+    &:hover {
       top: 177px;
       left: 293px;
     }
-    &:active::after {
+
+    &:active {
       top: 195px;
       left: 309px;
     }
   }
 
   .production__content {
-    padding: 34px 58px 0 760px;
+    padding: 34px 58px 59px 760px;
   }
 
-  .production__order {
-    margin: 46px 0 0 0;
-  }
 }
