--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -22,7 +22,6 @@
 .reviews__title {
   margin: 0;
   padding: 0;
-  font-family: @font-bold;
   font-size: 25px;
   font-weight: 700;
   line-height: 30px;
@@ -45,7 +44,6 @@
   display: block;
   margin: 0;
   padding: 26px 0 0 0;
-  font-family: @font-bold;
   font-size: 18px;
   font-weight: 700;
   font-style: normal;
@@ -63,7 +61,7 @@
 
 .reviews__arrows {
   margin: 0;
-  padding: 30px 0 0 0;
+  padding: 30px 0 38px 0;
   font-size: 0;
 }
 
@@ -119,10 +117,6 @@
 
 .reviews__arrow:nth-child(2) {
   margin-left: -1px;
-}
-
-.reviews__write {
-  margin: 38px 0 0 0;
 }
 
 @media @tablet-widths {
@@ -196,14 +190,6 @@
       right: 22px;
     }
   }
-
-  .reviews__write {
-    position: absolute;
-    top: 79px;
-    right: 50px;
-    width: 171px;
-    margin: 0;
-  }
 }
 
 @media @desktop-widths {
@@ -231,10 +217,6 @@
 
   .reviews__arrows {
     bottom: 199px;
-    right: 0;
-  }
-
-  .reviews__write {
     right: 0;
   }
 }
