--- a/less/common.less
+++ b/less/common.less
@@ -1,6 +1,6 @@
 body {
   min-width: 320px;
-  font-family: @font-regular;
+  font-family: "OpenSans", "Arial", sans-serif;
   font-weight: 400;
   color: @cl-black;
   background-color: @cl-mainbackground;
